# c-snake

./: .gitignore  CMakeLists.txt  init.sh  main.c  main.out  new_init.sh
new_sn/: apple.c  apple.h  direction.c  direction.h  double_list.c  double_list.h  main.c  new_snake.c  snake.c  snake.h  world.c  world.h
test/: test  test.c
